Fix invisible bug news template

--- a/index.html
+++ b/index.html
@@ -33,22 +33,34 @@ layout: default
             {% for new in site.data.contentful.spaces.news.news limit:3 %}
             <div class="new come-in-module col-md-4">
                 <div>
-                    <img src="{{ new.image.url }}">
+                  <img src="{{ new.image.url }}">
                 </div>
                 <h1 class="h1_news">
-                    {% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {%
-                    endif %}
+                {% if site.lang == "fr" %}
+                  {{ new.titre }}
+                {% elsif site.lang == "de" %}
+                  {{ new.titreDe }}
+                {% else %}
+                  {{ new.titreEn }}
+                {% endif %}
                 </h1>
                 <p class="p_news">
-                    {% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '
-                    <p>' | remove: '</p>'}} {% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove:
-                    '
-                    <p>' | remove: '</p>'}} {% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '
-                    <p>' | remove: '</p>'}} {% endif %}
+                  {% if site.lang == "fr" %}
+                    {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
+                  {% elsif site.lang == "de" %}
+                    {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
+                  {% else %}
+                    {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
+                  {% endif %}
                 </p>
-                {% capture dir %}news-{{site.lang}}{% endcapture %} {% if site.lang == "fr" %} {% capture link %}{{new.titre}}{% endcapture
-                %} {% elsif site.lang == "de" %} {% capture link %}{{new.titreDe}}{% endcapture %} {% else %} {% capture
-                link %}{{new.titreEn}}{% endcapture %} {% endif %}
+                {% capture dir %}news-{{site.lang}}{% endcapture %}
+                {% if site.lang == "fr" %}
+                  {% capture link %}{{new.titre}}{% endcapture %}
+                {% elsif site.lang == "de" %}
+                  {% capture link %}{{new.titreDe}}{% endcapture %}
+                {% else %}
+                  {% capture link %}{{new.titreEn}}{% endcapture %}
+                {% endif %}
                 <p class="news_date">{{new.date | date: "%d.%m.%Y"}}<a href="/{{ link | datapage_url: dir }}">{% t pages.index.news.plus %}</a></p>
             </div>
             {% endfor %}
