--- a/news.html
+++ b/news.html
@@ -48,9 +48,10 @@ layout: default
     </div>
     <div class="row">
       {% for new in site.data.contentful.spaces.news.news limit:9 %}
-        <div class="new come-in-module col-md-4">
+        <div class="come-in-module col-md-4">
+            <div class="new col-md-12">
             <div>
-              <img src="{{ new.image.url }}">
+              <img class="grow" src="{{ new.image.url }}">
             </div>
             <h1 class="h1_news">
             {% if site.lang == "fr" %}
@@ -79,6 +80,7 @@ layout: default
               {% capture link %}{{new.titreEn}}{% endcapture %}
             {% endif %}
             <p class="news_date">{{new.date | date: "%d.%m.%Y"}}<a href="/{{ link | datapage_url: dir }}">{% t pages.index.news.plus %}</a></p>
+            </div>
         </div>
         {% capture modulo %}{{ forloop.index | modulo: 3 }}{% endcapture %}
         {% if modulo == "0" %}
