Add flip coin animation

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/biathlon.png">
+              <img src="images/sports/biathlon.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" target="_blank" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
@@ -48,7 +48,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/luge.png">
+              <img src="images/sports/luge.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.luge.link %}" target="_blank">{% t pages.about.sports.luge.text %}</a>
@@ -58,7 +58,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/bobsleigh.png">
+              <img src="images/sports/bobsleigh.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}" target="_blank">{% t pages.about.sports.bobsleigh.text %}</a>
@@ -68,7 +68,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/patinage-artistique.png">
+              <img src="images/sports/patinage-artistique.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}" target="_blank">{% t pages.about.sports.patinage-artistique.text %}</a>
@@ -78,7 +78,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/combine-nordique.png">
+              <img src="images/sports/combine-nordique.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}" target="_blank">{% t pages.about.sports.combine-nordique.text %}</a>
@@ -88,7 +88,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/patinage-vitesse.png">
+              <img src="images/sports/patinage-vitesse.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}" target="_blank">{% t pages.about.sports.patinage-vitesse.text %}</a>
@@ -98,7 +98,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/curling.png">
+              <img src="images/sports/curling.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.curling.link %}" target="_blank">{% t pages.about.sports.curling.text %}</a>
@@ -108,7 +108,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/short-track.png">
+              <img src="images/sports/short-track.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.short-track.link %}" target="_blank">{% t pages.about.sports.short-track.text %}</a>
@@ -118,7 +118,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/hockey-sur-glace.png">
+              <img src="images/sports/hockey-sur-glace.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}" target="_blank">{% t pages.about.sports.hockey-sur-glace.text %}</a>
@@ -128,7 +128,7 @@ layout: default
         <div class="col-md-6 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/saut-a-ski.png">
+              <img src="images/sports/saut-a-ski.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}" target="_blank">{% t pages.about.sports.saut-a-ski.text %}</a>
@@ -140,7 +140,7 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/skeleton.png">
+              <img src="images/sports/skeleton.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}" target="_blank">{% t pages.about.sports.skeleton.text %}</a>
@@ -150,7 +150,7 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-freestyle.png">
+              <img src="images/sports/ski-freestyle.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}" target="_blank">{% t pages.about.sports.ski-freestyle.text %}</a>
@@ -160,7 +160,7 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-alpin.png">
+              <img src="images/sports/ski-alpin.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}" target="_blank">{% t pages.about.sports.ski-alpin.text %}</a>
@@ -170,7 +170,7 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-de-fond.png">
+              <img src="images/sports/ski-de-fond.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}" target="_blank">{% t pages.about.sports.ski-de-fond.text %}</a>
@@ -180,7 +180,7 @@ layout: default
         <div class="col-md-12 col-xs-6">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/snowboard.png">
+              <img src="images/sports/snowboard.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}" target="_blank">{% t pages.about.sports.snowboard.text %}</a>
@@ -194,7 +194,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/biathlon.png">
+              <img src="images/sports/biathlon.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}" target="_blank">{% t pages.about.sports.biathlon.text %}</a>
@@ -204,7 +204,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/bobsleigh.png">
+              <img src="images/sports/bobsleigh.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}" target="_blank">{% t pages.about.sports.bobsleigh.text %}</a>
@@ -214,7 +214,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/combine-nordique.png">
+              <img src="images/sports/combine-nordique.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}" target="_blank">{% t pages.about.sports.combine-nordique.text %}</a>
@@ -224,7 +224,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/curling.png">
+              <img src="images/sports/curling.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.curling.link %}" target="_blank">{% t pages.about.sports.curling.text %}</a>
@@ -234,7 +234,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/hockey-sur-glace.png">
+              <img src="images/sports/hockey-sur-glace.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}" target="_blank">{% t pages.about.sports.hockey-sur-glace.text %}</a>
@@ -244,7 +244,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/luge.png">
+              <img src="images/sports/luge.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.luge.link %}" target="_blank">{% t pages.about.sports.luge.text %}</a>
@@ -254,7 +254,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/patinage-artistique.png">
+              <img src="images/sports/patinage-artistique.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}" target="_blank">{% t pages.about.sports.patinage-artistique.text %}</a>
@@ -264,7 +264,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/patinage-vitesse.png">
+              <img src="images/sports/patinage-vitesse.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}" target="_blank">{% t pages.about.sports.patinage-vitesse.text %}</a>
@@ -276,7 +276,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/short-track.png">
+              <img src="images/sports/short-track.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.short-track.link %}" target="_blank">{% t pages.about.sports.short-track.text %}</a>
@@ -286,7 +286,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/saut-a-ski.png">
+              <img src="images/sports/saut-a-ski.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}" target="_blank">{% t pages.about.sports.saut-a-ski.text %}</a>
@@ -296,7 +296,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/skeleton.png">
+              <img src="images/sports/skeleton.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}" target="_blank">{% t pages.about.sports.skeleton.text %}</a>
@@ -306,7 +306,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-freestyle.png">
+              <img src="images/sports/ski-freestyle.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}" target="_blank">{% t pages.about.sports.ski-freestyle.text %}</a>
@@ -316,7 +316,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-alpin.png">
+              <img src="images/sports/ski-alpin.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}" target="_blank">{% t pages.about.sports.ski-alpin.text %}</a>
@@ -326,7 +326,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/ski-de-fond.png">
+              <img src="images/sports/ski-de-fond.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}" target="_blank">{% t pages.about.sports.ski-de-fond.text %}</a>
@@ -336,7 +336,7 @@ layout: default
         <div class="col-xs-12">
           <div class="pictos-grp row">
             <div class="col-md-3">
-              <img src="images/sports/snowboard.png">
+              <img src="images/sports/snowboard.png" class="flip">
             </div>
             <div class="col-md-9">
               <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}" target="_blank">{% t pages.about.sports.snowboard.text %}</a>
