Change href venues

--- a/venues.html
+++ b/venues.html
@@ -28,7 +28,7 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite1}}" href="#">
+        <a class="sqr" title="{{section1.titreSite1}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -51,7 +51,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite2}}" href="#">
+        <a class="sqr" title="{{section1.titreSite2}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -74,7 +74,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite3}}" href="#">
+        <a class="sqr" title="{{section1.titreSite3}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -97,7 +97,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite4}}" href="#">
+        <a class="sqr" title="{{section1.titreSite4}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -149,7 +149,7 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite1}}" href="#">
+        <a class="sqr" title="{{section2.titreSite1}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -172,7 +172,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite2}}" href="#">
+        <a class="sqr" title="{{section2.titreSite2}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -195,7 +195,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite3}}" href="#">
+        <a class="sqr" title="{{section2.titreSite3}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -218,7 +218,7 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite4}}" href="#">
+        <a class="sqr" title="{{section2.titreSite4}}" href="#!">
           <div class="inside">
             <div class="hover">
               <div class="title">
