Add contentful image resize + quality 80

--- a/venues.html
+++ b/venues.html
@@ -45,7 +45,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section1.imageSite1.url }}" alt="{{section1.imageSite1.description}}">
+              <img src="{{ section1.imageSite1.url }}?w=350&h=350&q=80" alt="{{section1.imageSite1.description}}">
             </div>
           </div>
         </a>
@@ -68,7 +68,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section1.imageSite2.url }}" alt="{{section1.imageSite2.description}}">
+              <img src="{{ section1.imageSite2.url }}?w=350&h=350&q=80" alt="{{section1.imageSite2.description}}">
             </div>
           </div>
         </a>
@@ -91,7 +91,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section1.imageSite3.url }}" alt="{{section1.imageSite3.description}}">
+              <img src="{{ section1.imageSite3.url }}?w=350&h=350&q=80" alt="{{section1.imageSite3.description}}">
             </div>
           </div>
         </a>
@@ -114,7 +114,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section1.imageSite4.url }}" alt="{{section1.imageSite4.description}}">
+              <img src="{{ section1.imageSite4.url }}?w=350&h=350&q=80" alt="{{section1.imageSite4.description}}">
             </div>
           </div>
         </a>
@@ -166,7 +166,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section2.imageSite1.url }}" alt="{{section2.imageSite1.description}}">
+              <img src="{{ section2.imageSite1.url }}?w=350&h=350&q=80" alt="{{section2.imageSite1.description}}">
             </div>
           </div>
         </a>
@@ -189,7 +189,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section2.imageSite2.url }}" alt="{{section2.imageSite2.description}}">
+              <img src="{{ section2.imageSite2.url }}?w=350&h=350&q=80" alt="{{section2.imageSite2.description}}">
             </div>
           </div>
         </a>
@@ -235,7 +235,7 @@ layout: default
               </div>
             </div>
             <div class="img">
-              <img src="{{ section2.imageSite4.url }}" alt="{{section2.imageSite4.description}}">
+              <img src="{{ section2.imageSite4.url }}?w=350&h=350&q=80" alt="{{section2.imageSite4.description}}">
             </div>
           </div>
         </a>
