--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
             <div class="come-in-module col-sm-6 col-md-4">
                 <div class="new col-md-12">
                     <div class="wrap_media">
-                        <img class="grow" src="{{ new.image.url }}">
+                        <img class="grow" src="{{ new.image.url }}?w=400&h=400&q=80">
                     </div>
                     <h1 class="h1_news">
                         {% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {%
