Try to fix forms preventdefault

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ layout: default
         <div class="newsletter-text">
             <h1 class="h1_newsletter_cta">{% t pages.index.newsletter.part1 %}</h1>
         </div>
-        <form class="newsletter_cta_form flex stretch" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="/"
-            netlify>
+        <form class="newsletter_cta_form flex stretch" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="#" netlify>
             <div class="newsletter-form-adress">
                 <input data-name="Email" id="email" maxlength="256" name="email" placeholder="{% t pages.index.newsletter.placeholder %}"
                     required="required" type="email">
@@ -107,10 +106,10 @@ layout: default
                 <input class="newsletter_cta_btn btn" data-wait="Please wait..." type="submit" value="{% t pages.index.newsletter.button %}">
             </div>
         </form>
-        <div class="success">
+        <div class="success form-done">
             <div>{% t pages.index.newsletter.thanks %}</div>
         </div>
-        <div class="error">
+        <div class="error form-fail">
             <div>{% t pages.index.newsletter.oops %}</div>
         </div>
     </div>
