Blacklist form from smoothstate

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ layout: default
     <h1 class="h1_contact">{% t pages.contact.title %}</h1>
     <div class="row">
       <div class="col-md-6 form">
-          <form class="form-contact" data-name="Email Form" id="email-form-contact" netlify-honeypot="champcache" name="email-form-contact" action="#" netlify>
+          <form class="form form-contact" data-name="Email Form" id="email-form-contact" netlify-honeypot="champcache" name="email-form-contact" action="#" netlify>
             <label for="Firstname">{% t pages.contact.form.prenom.title %}</label>
             <input data-name="Firstname" id="Firstname" maxlength="256" name="Firstname" placeholder="{% t pages.contact.form.prenom.placeholder %}" required="required" type="text">
             <p class="cache"><label>Bot field: <input name="champcache"></label></p>
