--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ layout: default
         <div class="newsletter-text">
             <h1 class="h1_newsletter_cta">{% t pages.index.newsletter.part1 %}</h1>
         </div>
-        <form class="newsletter_cta_form flex stretch" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="#" netlify>
+        <form class="newsletter_cta_form form flex stretch" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="#" netlify>
             <div class="newsletter-form-adress">
                 <input data-name="Email" id="email" maxlength="256" name="email" placeholder="{% t pages.index.newsletter.placeholder %}"
                     required="required" type="email">
