--- a/venues.html
+++ b/venues.html
@@ -24,8 +24,9 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite1}}" href='{% if site.lang == "fr" %} {{ section1.lienSite1 }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
-                {% else %} {{ section1.lienSite1En }} {% endif %}'>
+        <a class="sqr" title="{{section1.titreSite1}}" 
+            href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }}
+                  {% else %} {{ section1.lienSite1En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -44,7 +45,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite2}}" href="#!">
+        <a class="sqr" title="{{section1.titreSite2}}"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }}
+          {% else %} {{ section1.lienSite2En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -63,7 +66,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite3}}" href="#!">
+        <a class="sqr" title="{{section1.titreSite3}}"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}
+          {% else %} {{ section1.lienSite3En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -82,7 +87,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section1.titreSite4}}" href="#!">
+        <a class="sqr" title="{{section1.titreSite4}}"
+            href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}
+          {% else %} {{ section1.lienSite4En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -125,7 +132,9 @@ layout: default
     </p>
     <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite1}}" href="#!">
+        <a class="sqr" title="{{section2.titreSite1}}"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }}
+          {% else %} {{ section2.lienSite1En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -144,7 +153,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite2}}" href="#!">
+        <a class="sqr" title="{{section2.titreSite2}}"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }}
+          {% else %} {{ section2.lienSite2En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -163,7 +174,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite3}}" href="#!">
+        <a class="sqr" title="{{section2.titreSite3}}"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }}
+          {% else %} {{ section2.lienSite3En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
@@ -182,7 +195,9 @@ layout: default
         </a>
       </div>
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="sqr" title="{{section2.titreSite4}}" href="#!">
+        <a class="sqr" title="{{section2.titreSite4}}"
+            href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }}
+          {% else %} {{ section2.lienSite4En }} {% endif %}'>
           <div class="inside">
             <div class="hover">
               <div class="title">
